chore: 不使用废弃的api